5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4143/executions/1747_3096.log
== TEST (2019-05-16 10:20:11) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4<=a=>11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4<=a=>11):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:27) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4=<a=>11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4=<a=>11):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:20:39) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4=<a>=11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4=<a>=11):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:04) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4<=a=>11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4<=a=>11):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:21:57) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4 =< a <= 11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4 =< a <= 11):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:06) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4 <= a <= 11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 12
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:16) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4 <= a =< 11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4 <= a =< 11):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:22) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4 =< a =< 11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4 =< a =< 11):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:22:34) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4 =< a <= 11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4 =< a <= 11):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:23:45) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4 =< a =< 11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4 =< a =< 11):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:25:11) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (4 <= a =< 11):
		b = 11-a
	elif (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 8
    if (4 <= a =< 11):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:15) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		b = 20
		soma = 
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	else:
		b = 11 - a
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 10
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:32) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		b = 20
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	else:
		b = 11 - a
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 10
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:46) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		b = 20
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	else:
		b = 11 - a
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 10
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:26:58) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		b = 20
	elif (a==2):
		b = 15
	elif (a==3):
		b = 10
	else:
		b = 11 - a
	a = int(input("Posicao:"))
-- ERROR:
File "XXXX", line 10
    soma = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:41) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	else:
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:30:59) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	else:
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:31:13) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	else:
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:32:35) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	elif (4=<a<=11):
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- ERROR:
File "XXXX", line 17
    elif (4=<a<=11):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:33:46) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a>0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	elif (4<= a =<11):
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- ERROR:
File "XXXX", line 17
    elif (4<= a =<11):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:11) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a!=0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	else:
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:42) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a!=0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	else:
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:37:59) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a!=0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	elif (4<= a <=11):
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- OUTPUT:
73
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 10:38:29) 
-- CODE:
# Primeiro lugar de 20 póntos
# segundo lugar 15
#terceiro lugar 10
#entre quarto e decimo 11 - a posição ex: 
a = int(input("Posicao de chegada:"))
soma = 0
while (a!=0):
	if (a ==1):
		a = 20
		soma = soma + a
	elif (a==2):
		a = 15
		soma = soma +a
	elif (a==3):
		a = 10
		soma = soma+a
	elif (4<= a <=11):
		a = 11 - a
		soma = soma + a
	a = int(input("Posicao:"))
print(soma)
-- EXECUTION TIME:
0.14586
-- TEST CASE 1:
---- input:
1
2
3
4
5
6
7
8
9
10
0
---- correct output:
73
---- user output:
73
-- TEST CASE 2:
---- input:
1
1
1
-20
-1
2
2
2
3
3
3
0
---- correct output:
135
---- user output:
135
-- TEST CASE 3:
---- input:
20
20
20
19
19
19
18
0
---- correct output:
0
---- user output:
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
